--- a/app/views/cars/edit.html.erb
+++ b/app/views/cars/edit.html.erb
@@ -1,66 +1,3 @@
 <% provide(:title, 'Редактирование авто') %>
  	
-  <div class="row">
-  	<div id="pan1" class="panel panel-info">
-  	  <div class="panel-heading"><strong>Редактирование авто:</strong></div> 		
-	  <div class="panel-body">
-	  	  <%= simple_form_for @car do |f| %>
-	  	  	
-          <div class="row">	  	
-		  <div class="col-md-6">
-		  <div class="panel  panel-default">		  	
-		  	<div class="panel-body">
-					<%= f.input :marca, label: "Марка *", as: :string, :input_html => { :size => 25} %>
-					<%= f.input :gnum, label: "Гос.номер *", as: :string, :input_html => { :size => 25} %>
-					<%= f.input :gaj, label: "Залог *, #{$valuta}", as: :integer %>
-					<%= f.input :cuznum, label: "№ кузова", as: :string, :input_html => { :size => 25} %>
-					<%= f.input :motnum, label: "№ двигателя", as: :string, :input_html => { :size => 25} %>
-                    <%= f.input :proddate, label: "Год выпуска", as: :integer %>
-                    <%= f.input :color, label: "Цвет", as: :string, :input_html => { :size => 25} %>
-                    <%= f.input :vmot, label: "Объем двигателя", as: :decimal, :input_html => { :size => 25} %>
-                    <%= f.input :tmasa, label: "Масса, кг", as: :decimal, :input_html => { :size => 25} %>
-                    <%= f.input :tsumm, label: "Стоимость, #{$valuta}", as: :integer %>
-			</div>
-		    </div>
-		    </div>
-    
-		    <div class="col-md-3">
-		    <div class="panel  panel-default">
-		    <div class="panel-body">
-					<%= f.input :int1, label: "Дни1*, <= ", as: :integer  %>
-					<%= f.input :int1price, label: "Цена1*, #{$valuta}", as: :integer %>
-					<%= f.input :int2, label: "Дни2, <=", as: :integer %>
-					<%= f.input :int2price, label: "Цена2, #{$valuta}", as: :integer %>
-					<%= f.input :int3, label: "Дни3, <=", as: :integer %>
-					<%= f.input :int3price, label: "Цена3, #{$valuta}", as: :integer %>
-					<%= f.input :int4, label: "Дни4, <=", as: :integer %>
-					<%= f.input :int4price, label: "Цена4, #{$valuta}", as: :integer %>
-			</div>
-		  	</div>
-		  	</div>
-		  	
-		  	<div class="col-md-3">
-		    <div class="panel  panel-default">
-		    <div class="panel-body">					
-					<%= f.input :int5, label: "Дни5, <=", as: :integer %>
-					<%= f.input :int5price, label: "Цена5, #{$valuta}", as: :integer %>
-					<%= f.input :int6, label: "Дни6, <=", as: :integer %>
-					<%= f.input :int6price, label: "Цена6, #{$valuta}", as: :integer %>
-					<%= f.input :int7, label: "Дни7, <=", as: :integer %>
-					<%= f.input :int7price, label: "Цена7, #{$valuta}", as: :integer %> 	
-			</div>
-		  	</div>
-		  	</div>
-		  		  		  				
-            </div>	<!--row-->
-	  		<div  align="center"><%= f.button :submit, "Сохранить", class: "btn btn-primary" %>  <%= f.button :submit, "Отмена", class: "btn btn-warning", name: "cancel" %></div>	
-	  				  	
-  			<% end %>
-  	  </div> <!--panel body-->	
-    </div> <!--panel-->		
- </div><!--row-->   	  	
- 	
-  	
-  
-	
-
+<%= render 'edit_show_avto' %>
