--- a/app/views/contracts/_clients.html.erb
+++ b/app/views/contracts/_clients.html.erb
@@ -21,7 +21,9 @@
 		  	<tr>
 			  	<td title='Выбрать клиента'><button type="button" class="btn btn-info  btn-xs" onclick="myFunction(<%= clitem.id %>,
 			  		     '<%= clitem.sname %> <%= clitem.name %>  <%= clitem.fname %> <%= clitem.tel %>', 
-			  		     'Паспорт: <%= clitem.pseria %> <%= clitem.dn %>. Дата рождения: <%= clitem.bdate%>. IDNP: <%= clitem.idno %>. Страна: <%= clitem.de %>. Адрес: <%= clitem.address %>. Email: <%= clitem.pemail %>.')" >
+			  		     'Паспорт: <%= clitem.pseria %> <%= clitem.dn %>. Дата рождения: <%= clitem.bdate%>. IDNP: <%= clitem.idno %>. Страна: <%= clitem.de %>. Адрес: <%= clitem.address %>. Тел: <%= clitem.tel %>. Email: <%= clitem.pemail %>.')",
+			  		      '<%= clitem.sname %>'
+			  		      >
 			  		<span class="glyphicon glyphicon-arrow-left" aria-hidden="true"></span>
 	                </button>
 			  	</td>
