--- a/app/views/contracts/_newclient.html.erb
+++ b/app/views/contracts/_newclient.html.erb
@@ -8,7 +8,7 @@
 		  <div class="col-md-6">
 		  <div class="panel  panel-default">		  	
 		  	<div class="panel-body">
-					<%= f.input :sname, label: "Фамилия", as: :string, :input_html => { :size => 25} %>
+					<%= f.input :sname, label: "Фамилия", as: :string, :input_html => { :size => 25}, :id => "client_sname" %>
 					<%= f.input :name, label: "Имя", as: :string, :input_html => { :size => 25} %>
 					<%= f.input :fname, label: "Отчество", as: :string, :input_html => { :size => 25} %>
 					<%= f.input :pseria, label: "Серия и номер паспорта", as: :string, :input_html => { :size => 25} %>
