--- a/app/views/contracts/show.html.erb
+++ b/app/views/contracts/show.html.erb
@@ -1,109 +1,3 @@
 <% provide(:title, if @contract.flag == 1 then 'Бронь' else 'Контракт' end) %>
 
-   <div class="row">
-  	<div id="pan1" class="panel panel-info">
-  	  <div class="panel-heading">Просмотр<%= if @contract.flag == 1 then  " брони"  else " контракта" end %><%= " № #{@contract.id}#{if @contract.cnum!='' then '/' else '' end}#{@contract.cnum} от #{@contract.stdate.strftime('%d.%m.%Y')}" %></strong></div> 		
-	  <div class="panel-body">
- 	
-  		<%= simple_form_for @contract do |f| %>
-  			
-          <div class="row">	  	
-		  <div class="col-md-6">
-		  <div class="panel  panel-default">		  	
-		  	<div class="panel-body">
-        
-	    	<div class="col-md-6">
-	    	<%= f.input :cnum, label: "Номер", as: :string, :readonly => true %>
-	    	</div>
-	    	<div class="col-md-6">
-	    	<%= f.association :user, label: "Агент", :label_method => lambda { |user| "#{user.username}"}, value_method: :id, include_blank: false, selected: if @contract.user.nil? then current_user.id else @contract.user.id end, :readonly => true %>	
-	    	</div>
-	    		
-	    	<%= f.input :flag, :as => :hidden  %>    	
-	    	  	    	   	
-	    	<label for="client_info" class="control-label"><%= "Клиент" %></label>
-	    	<%= text_field_tag 'client_info', if @contract.client then "#{@contract.client.sname} #{@contract.client.name} #{@contract.client.fname} #{@contract.client.tel}" else "не указан" end , :readonly => true, class: "form-control" %>	   	
-	    	<%= f.hidden_field :client_id , :id => "client_id" %>
-	    	
-	    	<%= hidden_field_tag 'vc', controller.controller_name %>
-	    	<%= hidden_field_tag 'va', controller.action_name %>
-	    	<%= hidden_field_tag 'flag', @contract.flag %>
-	
-	    	<%= f.input :order_date, :as => :hidden %>
-	    	<%= f.input :user_id, :value => if @contract.user_id.nil? then current_user.id else @contract.user_id end ,:as => :hidden %>
-	
-	    	<!--<%= f.association :car, label: "Авто",:label_method => lambda { |car| "#{car.marca}  #{car.gnum}"}, value_method: :id, include_blank: false, :onchange =>"GetChar (event);" %>-->
-	    	<div class="form-group">
-	          	<label for="car_id" class="control-label">Автомобиль</label>		
-	    	  	<%= select_tag "car_id", options_for_select(Car.all.collect {|p| [ p.marca + " "+p.gnum, p.id ] }, @contract.car_id), include_blank: false, class: "form-control", :readonly => true %>
-	    	</div>
-	    	
-	        <div class="col-md-6">
-	        <%= f.input :garant_summ, label: "Гарантийная сумма", as: :string, :readonly => true %>
-	        </div>	    	
-
-	    	<% if @contract.flag != 1 then %>
-	    	    <div class="col-md-6">
-				<%= f.input :zalog, label: "Залог, #{$valuta}", as: :integer, :readonly => true %>
-				</div>
-		    	<!-- пробег на начало -->
-		    	<div class="col-md-6"> 
-		    	<div class="form-group">
-		    		<label for="parcurs" class="control-label">Пробег на начало</label>
-		    		<%= number_field_tag 'parcurs', @parcurs, class: "form-control", :readonly => true %>
-		    	</div>
-		    	</div> 						
-	    	<% end %>
-	    	
-	    	<!--- место ------->
-	    	<div class="col-md-6">
-	    	<%= f.input :place, collection: [['0', 'Аэропорт'], ['1', 'Офис']], label_method: :second, value_method: :first, label: 'Место выдачи машины', placeholder: 'Выбрать место...', :readonly => true %>
-	    	</div>	    	
-    	
- 	    </div>
-		</div>
-		</div>
-    
-		<div class="col-md-6">
-		<div class="panel  panel-default">
-		<div class="panel-body">		       	
-    	<div class="form-group">
-
-		    <label for="stdate" class="control-label">Дата и время начала аренды</label>
-		    	<%= text_field_tag 'stdate', @contract.stdate.strftime('%d.%m.%Y %R'), :id => "dt", class: "form-control", :readonly => true %>
-	    	</div>
-	    	
-	    	<div class="form-group">
-	    		<label for="enddate" class="control-label">Дата и время окончания аренды</label>
-	    		<%= text_field_tag 'enddate', @contract.enddate.strftime('%d.%m.%Y %R'), :id => "dt1",:onchange =>"GetEndDate (event);", class: "form-control", :readonly => true %>
-	    	</div>
-	    		         
-	    	<%= f.input :dperiod, label: 'Кол-во дней', :readonly => true, input_html: {value: @daysinperiod} %>		    			
-	    	     	
-	    	<div class="col-md-6">
-	    	<%= f.input :price, label: "Цена в день, #{$valuta}", :readonly => true, input_html: {value: @pretperday} %>
-	    	</div>  
-	    	     	
-	        <% if @contract.flag != 1 then %>
-	            <div class="col-md-6"> 
-		    	<%= f.input :summ, label: "Сумма договора, #{$valuta}", :readonly => true %>
-		    	</div>
-	           	<div class="col-md-6">
-				<%= f.input :curs, label: "Курс, лей", :readonly => true %>
-				</div>
-		    	<div class="col-md-6">			    	
-		    	<%= f.input :costlei, label: "Сумма, лей", as: :decimal, :readonly => true %>
-		    	</div>	    	
-	    	<% end %>
-    	</div>
-		</div>
-		</div> 
-   	
-   	    </div>	<!--row-->
-	    <center><%= f.button :submit, "Редактировать", class: "btn btn-primary", name: "editfromshow" %> <%= f.button :submit, "Печать", class: "btn btn-info", name: "printfromshow" %> <%= f.button :submit, "Отмена", class: "btn btn-warning", name: "cancel" %></center>
-	    
-  		<% end %>
-  	  </div> <!--panel body-->	
-    </div> <!--panel-->		
- </div><!--row-->   
- 	
+<%= render 'newbronicontract' %>
