--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,7 +1,3 @@
-@import "bootstrap-sprockets";
-@import "bootstrap";
-@import "bootstrap/theme";
-
 $lightGray: #999;
 $grayMediumLight: #eaeaea;
 $reddarken4: #b71c1c;
@@ -34,11 +30,20 @@ $brownlighten5: #efebe9;
 $brownlighten4: #d7ccc8;
 $brownlighten3: #bcaaa4; 
 
+
+#nav-wrapper {
+   position: fixed;
+   top: 0;
+   width: 100%;
+   z-index:99;
+   overflow:auto;
+}
+
 /* ширина больше 1200px */
 @media (min-width: 1200px) {
   .container-fluid {
-    padding-left: 4%;
-    padding-right: 4%;
+    padding-left: 5%;
+    padding-right: 5%;
   }
 }
 
