--- a/app/views/clients/edit.html.erb
+++ b/app/views/clients/edit.html.erb
@@ -2,7 +2,8 @@
 
    <div class="row">
   	<div id="pan1" class="panel panel-info">
-  	  <div class="panel-heading"><strong>Редактирование клиента:</strong></div> 		
+  	  <div class="panel-heading"><strong><% if controller.action_name == 'edit' then %><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> Редактирование 
+  	  	                                 <% else %><span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span> Просмотр<% end %> клиента:</strong></div> 		
 	  <div class="panel-body">
 	  	  <%= simple_form_for @client do |f| %>
 	  	  	
