--- a/app/views/contracts/_newbronicontract.html.erb
+++ b/app/views/contracts/_newbronicontract.html.erb
@@ -24,12 +24,13 @@
 } );
 
   
-   function myFunction(a,b,c) 
+   function myFunction(a,b,c,d) 
     {  
 	    var text = a;   
 	    $("#client_id").val(a);
 	    $("#client_info1").val(b);
 	    $("#client_info2").val(c);
+	    $("#client_sname").val(d);
     }
 
   $(function() {
@@ -196,7 +197,8 @@
 	          break; 	  
            }
         }                      
-        $("#parcurs").val(parcurs);	            
+        $("#parcurs").val(null);
+        document.getElementById('lastparcurs').innerHTML = 'Пробег на начало ' + parcurs;	            
    };
  
   function getgarantsum(){
@@ -267,10 +269,13 @@ Click this link to show the current <%= link_to "time", contracts_newbroni_path,
   <%= simple_form_for @contract do |f| %>	
     <div class="row">	  	 	
   	  <div class="panel panel-info">
-  	  	<div class="panel-heading"><strong><%= case when (@contract.flag == 1 and @contract.id.nil?) then "Новая бронь" 
+  	  	<div class="panel-heading"><strong><% if controller.action_name != 'show' then %><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+  	  	                                   <% else %><span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span><% end %>
+  	  		                               <%= case when (@contract.flag == 1 and @contract.id.nil?) then "Новая бронь" 
   	  		                                        when (@contract.flag == 2 and @contract.id.nil?) then "Новый контракт" 
-  	  		                                        when (@contract.flag == 1 and @contract.id) then ("Редактирование брони № #{@contract.id}" + if @contract.cnum!='' then "/#{@contract.cnum}" else "" end) 
-  	  		                                        when (@contract.flag == 2 and @contract.id) then ("Редактирование контракта № #{@contract.id}" + if @contract.cnum!='' then "/#{@contract.cnum}" else "" end) 
+  	  		                                        when (@contract.flag == 1 and @contract.id) then (if controller.action_name!='show' then "Редактирование" else "Просмотр" end + " брони № #{@contract.id}" + if @contract.cnum!='' then "/#{@contract.cnum}" else "" end) 
+  	  		                                        when (@contract.flag == 2 and @contract.id) then (if controller.action_name!='show' then "Редактирование" else "Просмотр" end + " контракта № #{@contract.id}" + if @contract.cnum!='' then "/#{@contract.cnum}" else "" end)  
+  	  		                                        when (@contract.flag == 3 and @contract.id) then (if controller.action_name!='show' then "Редактирование" else "Просмотр" end + " закрытого контракта № #{@contract.id}" + if @contract.cnum!='' then "/#{@contract.cnum}" else "" end) 
   	  		                                        else "" end %><%= " от #{@contract.stdate.strftime('%d.%m.%Y')}" %>	                       
   	  	</strong></div>
   	  	<div class="panel-body">
@@ -280,13 +285,27 @@ Click this link to show the current <%= link_to "time", contracts_newbroni_path,
 		<div class="panel  panel-default">		  	
 		<div class="panel-body">  	  		
 	    <!-- ручной номер документа -->
-    	<%= f.input :cnum, label: "Номер", as: :string, :input_html => { :size => 25} %>
+	    <div class="col-md-6">
+    		<%= f.input :cnum, label: "Номер ручной", as: :string, :input_html => { :size => 25}, :readonly => if (@contract.flag == 3  or controller.action_name=='show') then true else false end %>
+	    </div>
+	    <div class="col-md-6">
+	    	<%= f.association :user, label: "Агент", :label_method => lambda { |user| "#{user.username}"}, value_method: :id, include_blank: false, selected: if @contract.user.nil? then current_user.id else @contract.user.id end, :readonly => true %>	
+	    </div>    	
     	<!-- тип контракта 1=бронь -->
     	<%= f.input :flag, :as => :hidden %>   	
-    	<!-- клиент -->  	    	
+    	<!-- клиент -->
+    	<% if @contract.flag != 3 and controller.action_name!='show' then %>  	    	
     	<a><label id="lrem1" for="rem_lab"><%= check_box_tag 'active','1',false, :id => "rem1" %>Создать нового клиента </label></a><br>
+    	<% end %>
 	    <a><label id="lrem2" for="rem_lab"><%= check_box_tag 'active','0',false, :id => "rem2" %>Клиент</label></a>    	    		   	
     	<%= f.hidden_field :client_id, :id => "client_id" %>
+    <!--	<%= f.input :client_id, label: 'Клиент ', :collection => Client.all.order(sname: :asc, name: :asc, fname: :asc), 
+				    :label_method => lambda { |client| "#{client.sname} | #{client.name} | #{client.fname} "}, 
+				    value_method: :id, include_blank: true, prompt: "Клиент..." %> 
+      <%= f.input :client do %>
+          <%= f.select :client, Client.all.order(:name).map { |r| [r.name, r.id] }, include_blank: true %>
+      <% end %>	 -->			    
+            
    			
 		<div id="client_info">
 		<div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
@@ -320,32 +339,43 @@ Click this link to show the current <%= link_to "time", contracts_newbroni_path,
         <!-- автомобиль --> 
     	<div class="form-group">
           	<label for="car_id" class="control-label">Автомобиль</label>		
-    	  	<%= select_tag "car_id", options_for_select(Car.all.collect {|p| [ p.marca + " "+p.gnum, p.id ] }, @contract.car_id), :onchange =>'whenchangeCar();', include_blank: true, class: "form-control" %>
+    	  	<%= select_tag "car_id", options_for_select(Car.all.collect {|p| [ p.marca + " "+p.gnum, p.id ] }, @contract.car_id), :onchange =>'whenchangeCar();', include_blank: true, class: "form-control", :readonly => if (@contract.flag != 3  and controller.action_name!='show') then false else true end %>
     	</div>
     	<!-- гарант сумма -->
-    	<div class="col-md-6"> 
+    	<div class="col-md-6">
+    	<% if @contract.flag != 3 then %>	 
     	<label for="garant_summ" class="control-label"><%= "Гарантийная сумма" %></label>
-    	<%= text_field_tag 'garant_summ', @contract.garant_summ, :input_html => { :size => 25}, class: "form-control", :readonly => if @contract.flag == 1 then false else true end %>
+    	<%= text_field_tag 'garant_summ', @contract.garant_summ, :input_html => { :size => 25}, class: "form-control", :readonly => if (@contract.flag == 1  and controller.action_name!='show') then false else true end %>
+    	<% end %>
     	</div>
     	<!-- залог -->
     	<div class="col-md-6"> 
     	<% if @contract.flag != 1 then %>
-    	    <label for="zalog" class="control-label"><%= "Залог, #{$valuta}" %></label>
-    		<%= text_field_tag 'zalog', @contract.zalog, class: "form-control" %>
+    	    <label for="zalog" class="control-label"><%= "Залог" %></label>
+    		<%= text_field_tag 'zalog', @contract.zalog, class: "form-control", :readonly => if (@contract.flag == 3  or controller.action_name=='show') then true else false end %>
     	<% end %>
     	</div>
     	<!-- пробег на начало -->
     	<div class="col-md-6">
     	<% if @contract.flag != 1 then %> 
-    	<div class="form-group">
-    		<label for="parcurs" class="control-label">Пробег на начало</label>
-    		<%= number_field_tag 'parcurs', @parcurs, class: "form-control", :id => "parcurs", class: "form-control" %>
+    	<div class="form-group <%= if !@parcurs then 'has-error' end %>">
+    		<label for="parcurs" class="control-label" id='lastparcurs'>Пробег на начало <%= "#{@lastparcurs}" %></label>
+    		<%= number_field_tag 'parcurs', @parcurs, class: "form-control", class: "form-control", placeholder: "Введите пробег!!!", :readonly => if (@contract.flag == 3  or controller.action_name=='show') then true else false end %>
     	</div>
     	<% end %>
     	</div>
+    	<!-- пробег на конец -->
+    	<% if @contract.flag == 3 then %>
+    	<div class="col-md-6">   	 
+    	<div class="form-group <%= if !@parcurse then 'has-error' end %>">
+    		<label for="parcurse" class="control-label" id='lastparcurs'>Пробег на конец</label>
+    		<%= number_field_tag 'parcurse', @parcurse, class: "form-control", class: "form-control", placeholder: "Введите пробег!!!", :readonly => if (@contract.flag == 3 and controller.action_name!='show') then false else true end %>
+    	</div>
+    	</div>
+    	<% end %>
     	<!--- место ------->
     	<div class="col-md-6">
-    	<%= f.input :place, collection: [['0', 'Аэропорт'], ['1', 'Офис']], label_method: :second, value_method: :first, label: 'Место выдачи машины', placeholder: 'Выбрать место...', :readonly => if @contract.flag == 1 then false else true end %>
+    	<%= f.input :place, collection: [['0', 'Аэропорт'], ['1', 'Офис']], label_method: :second, value_method: :first, label: 'Место выдачи машины клиенту', placeholder: 'Выбрать место...', :readonly => if ((@contract.flag == 1 or @contract.flag == 2) and controller.action_name!='show') then false else true end %>
     	</div>
     	</div>
 		</div>
@@ -358,29 +388,48 @@ Click this link to show the current <%= link_to "time", contracts_newbroni_path,
     	<!-- дата начала -->
     	<div class="form-group">
 	    	<label for="stdate" class="control-label">Дата начала аренды</label>
-	    	<%= date_field_tag 'stdate', @contract.stdate.to_date, :onchange => "whenchangeDates(0);", class: "form-control" %>
+	    	<%= date_field_tag 'stdate', @contract.stdate.to_date, :onchange => "whenchangeDates(0);", class: "form-control", :readonly => if (@contract.flag == 3  or controller.action_name=='show') then true else false end %>
     	</div>
     	</div>
     	<div class="col-md-6">
     	<!-- время начала -->
-        <%= f.input :sttime, as: :time ,label: "Время начала аренды" , default: @contract.stdate ? Time.parse(@contract.stdate.strftime('%R')) : Time.parse(Time.now.strftime('%R')) %>
+    	<%= simple_fields_for :timebeg do |n| %>
+        	<%= n.input :sttime, as: :time ,label: "Время начала аренды" , default: @contract.stdate ? Time.parse(@contract.stdate.strftime('%R')) : Time.parse(Time.now.strftime('%R')), :readonly => if (@contract.flag == 3  or controller.action_name=='show') then true else false end, minute_step: 15 %>
+        <% end %>
         </div>
     	<div class="col-md-6">
     	<!-- дата конца -->
     	<div class="form-group">
     		<label for="enddate" class="control-label">Дата окончания аренды</label>
-    		<%= date_field_tag 'enddate', @contract.enddate.to_date, :onchange => 'whenchangeDates(1);', class: "form-control" %>
+    		<%= date_field_tag 'enddate', @contract.enddate.to_date, :onchange => 'whenchangeDates(1);', class: "form-control", :readonly => if (@contract.flag == 3  or controller.action_name=='show') then true else false end %>
     	</div>
     	</div>
     	<div class="col-md-6">
     	<!-- время конца -->
-    	<%= f.input :endtime, as: :time ,label: "Время окончания аренды" , default: @contract.enddate ? Time.parse(@contract.enddate.strftime('%R')) : Time.parse(Time.now.strftime('%R')) %> 
+    	<%= simple_fields_for :timeend do |n| %>
+    		<%= n.input :endtime, as: :time ,label: "Время окончания аренды" , default: @contract.enddate ? Time.parse(@contract.enddate.strftime('%R')) : Time.parse(Time.now.strftime('%R')), :readonly => if (@contract.flag == 3  or controller.action_name=='show') then true else false end, minute_step: 15 %>
+    	<% end %> 
     	</div>
+    	<% if @contract.flag == 3 then %>
+    	<div class="col-md-6">
+    	<!-- ф дата конца -->
+    	<div class="form-group">
+    		<label for="fenddate" class="control-label">Дата окончания аренды (факт)</label>
+    		<%= date_field_tag 'fenddate', @contract.fenddate.to_date, :onchange => 'whenchangeDates(1);', class: "form-control", :readonly => if (@contract.flag != 3  or controller.action_name=='show') then true else false end %>
+    	</div>
+    	</div>    	
+    	<div class="col-md-6">
+    	<!-- ф время конца -->
+    	<%= simple_fields_for :ftimeend do |n| %>
+    		<%= n.input :fendtime, as: :time ,label: "Время окончания аренды (факт)" , default: @contract.fenddate ? Time.parse(@contract.fenddate.strftime('%R')) : Time.parse(Time.now.strftime('%R')), :readonly => if (@contract.flag != 3  or controller.action_name=='show') then true else false end, minute_step: 15 %>
+    	<% end %> 
+    	</div>
+    	<% end %>
     	<!-- ко-во дней -->
     	<div class="form-group">
 	  		<%= label_tag 'Кол-во дней' %>
-	    	<%= number_field_tag 'dperiod', @contract.dperiod, :onchange =>'whenchangeDates(3);', as: :integer, class: "form-control"  %>
-    	</div>
+	    	<%= number_field_tag 'dperiod', @contract.dperiod, :onchange =>'whenchangeDates(3);', as: :integer, class: "form-control", :readonly => if (@contract.flag == 3  or controller.action_name=='show') then true else false end  %>
+    	</div>   	
     	<div class="col-md-6">     	   	  	   		
     	<!-- цена -->
     	<div class="form-group">
@@ -393,7 +442,7 @@ Click this link to show the current <%= link_to "time", contracts_newbroni_path,
     	<div class="col-md-6">
     	    <div class="form-group"> 
 	    		<%= label_tag "Сумма договора, #{$valuta.upcase}" %>
-	    		<%= number_field_tag 'summ', @contract.summ ,:onkeyup =>"getPriceFromSumm();", as: :integer, class: "form-control"  %>
+	    		<%= number_field_tag 'summ', @contract.summ ,:onkeyup =>"getPriceFromSumm();", as: :integer, class: "form-control", :readonly => if (@contract.flag == 2  and controller.action_name!='show') then false else true end  %>
     	    </div>
     	</div>
     	<div class="col-md-6">   
@@ -413,18 +462,26 @@ Click this link to show the current <%= link_to "time", contracts_newbroni_path,
 		</div>
 		</div>    	
    	    </div>	<!--row-->
+   	    
+ 		<div class="row">
+ 		<%= render 'newclient' %>
+ 		</div>	<!--row-->
+ 		
+	    <% if controller.action_name != 'show' then %>
 	    <center><%= submit_tag('Сохранить', class: "btn btn-primary") %> <%= f.button :submit, "Печать", class: "btn btn-info", name: "printfromedit" %> <%= f.button :submit, "Отмена", class: "btn btn-warning", name: "cancel" %></center>
+		<% else %>
+		<center><%= f.button :submit, "Редактировать", class: "btn btn-primary", name: "editfromshow" %> <%= f.button :submit, "Печать", class: "btn btn-info", name: "printfromshow" %> <%= f.button :submit, "Отмена", class: "btn btn-warning", name: "cancel" %></center>
+		<% end %>
 			
 		</div> <!--panel-body--->    
 	</div> <!--panel-->
  </div>
  
- <div class="row">
- <%= render 'newclient' %>
- </div>	<!--row-->
  <% end %>
- 
+
+<% if (@contract.flag != 3  and controller.action_name!='show') then %> 
  <div class="row">   
  <%= render 'clients' %>
  </div>	<!--row-->
+ <% end %>
 
