--- a/app/views/contracts/index.html.erb
+++ b/app/views/contracts/index.html.erb
@@ -1,9 +1,9 @@
 <% provide(:title, 'Контракты') %>
 
 <script>
-	$(document).ready(function() {
-    $('#mcl').DataTable( {
-        "order": [[ 2, "desc" ],[ 1, "desc" ]],
+$(document).ready(function() {
+    var table = $('#cpstable').DataTable( {
+        "order": [[ 3, "desc" ],[ 1, "desc" ]],
         "language": {
             "lengthMenu": "Отображать _MENU_ строк на странице",
             "zeroRecords": "Ничего не найдено - увы...",
@@ -18,54 +18,92 @@
                 last:       ">>"
             }
         },
-        "pagingType": "full_numbers"
-    } );
+        "pagingType": "full_numbers",
+        "pageLength": 25,
+         "fixedHeader": {
+               headerOffset: ($('#navMenu').outerHeight() - 1)
+         },
+         responsive: {
+            details: {
+                type: 'column'
+            }
+        },
+        columnDefs: [ {
+            className: 'control',
+            orderable: false,
+            targets:   0
+        } ]
+    } ); 
 } );
-</script>
-
-  <div class="table-responsive">	
-	<table id="mcl" class="table table-bordered table-condensed table-hover table-striped">	
-		<small>
+</script>	  	  
+	 	  	
+	<table id="cpstable" class="table table-bordered table-condensed table-hover table-striped dt-responsive nowrap compact" style="width:100%">
 		<thead>
 			<tr  class="info">
-			   <th>.......</th>	
-			   <th>№</th>
-		<!--   <th>От</th>  -->
-			   <th>Aгент</th>
-			   <th>Автомобиль</th>
-			   <th width=20%>Период</th>
+			   <th style="width:5%"></th>	
+			   <th class="all"  style="width:3%">№</th>	
+			   <th class="none">...........</th>	
+		       <th class="min-desktop">От</th>  
+			   <th class="none">Aгент</th>
+			   <th class="all">Автомобиль</th>
+			   <th>С даты</th>
+			   <th>По дату</th>
+			   <th class="none">На срок</th>
 		<!--   <th width=2%>Гар. сумма</th> -->
-			   <th>Залог, <% if $valuta.upcase=='EUR' then %>&euro;<% else %><%= "#{$valuta}" %><% end %></th>
-			   <th>Цена в день</th>
-			   <th>Сумма</th>
-			   <th>Клиент</th>
-			   <th>Пробег</br> на начало</th>			   
+			   <th class="min-desktop">Залог</th>
+			   <th class="none">Цена в день</th>
+			   <th class="none">Сумма</th>
+			   <th style="width:20%">Клиент</th>
+			   <th class="min-desktop">Место</th>
+			   <th class="min-desktop">Пробег начало</th>		   			   
 			</tr>	
 		</thead>
+		<tfoot>
+			<tr  class="info">
+			   <th style="width:5%"></th>	
+			   <th class="all"  style="width:3%">№</th>	
+			   <th class="none">...........</th>	
+		       <th class="all">От</th>  
+			   <th class="none">Aгент</th>
+			   <th class="all">Автомобиль</th>
+			   <th>С даты</th>
+			   <th>По дату</th>
+			   <th class="none">На срок</th>
+		<!--   <th width=2%>Гар. сумма</th> -->
+			   <th>Залог</th>
+			   <th class="none">Цена в день</th>
+			   <th class="none">Сумма</th>
+			   <th style="width:20%">Клиент</th>
+			   <th>Место</th>
+			   <th>Пробег начало</th>		   			   
+			</tr>	
+		</tfoot>		
 		<tbody>
 			<% @contracts.each do |c| %>
 					<% if c.updated_at > (Time.now.ago($GreenDelay)) %><tr class="success"><% else %><tr><% end %>
+						<td></td>
+						<td><%= link_to ("#{c.id}" + if c.cnum!='' then "/#{c.cnum} " else " " end), contracts_show_path(:id => c.id),:method => :get, :title => 'Посмотреть контракт' %></td>
 						<td><%= link_to " " , contracts_show_path(:id => c.id),:method => :get, :class=> "glyphicon glyphicon-eye-open", :title => 'Посмотреть контракт' %>							
 							<%= link_to " " , contracts_edit_path(:id => c.id),:method => :get, :class=> "glyphicon glyphicon-pencil", :title => 'Редактировать контракт' %>
 							<%= link_to image_tag('Apps-Pdf-B-icon.png', :alt => "PDF", :width => "20", :height => "20"), contracts_show_path(:id => c.id, format: "pdf") %>
 							<%= link_to " " , contracts_destroy_path(:id => c.id),:method => :get, :class=> "glyphicon glyphicon-remove", :title => 'Удалить контакт', data: { confirm: "Удалить контракт #{c.id}/#{c.cnum} от #{c.order_date.strftime('%d.%m.%Y')}?" } %>
-                        </td>						
-						<td><%= "#{c.id}" + if c.cnum!='' then "/#{c.cnum} " else " " end %></td>
+                        </td>											
+						<td><%= c.stdate.strftime('%Y.%m.%d') %></td>
 				<!--	<td><%= c.order_date.strftime('%Y.%m.%d') %></td>  -->
 						<td><%= unless c.user.nil? then c.user.username end %></td>
-						<td><%= unless c.car.nil? then "#{c.car.marca} #{c.car.gnum}" end %></td>
-						<td><%= "#{c.stdate.strftime('%d.%m.%Y_%R')}" %></br><%= "#{c.enddate.strftime('%d.%m.%Y_%R')}" %></br>
-						        <%= if c.dperiod then "#{c.dperiod} " +  
+						<td><% unless c.car.nil? then %><%= link_to "#{c.car.marca} #{c.car.gnum}" , cars_show_path(:id => c.car.id),:method => :get, :title => 'Посмотреть авто' %><% end %></td>
+						<td><%= "#{c.stdate.strftime('%d.%m.%Y %R')}" %></td>
+					    <td><%= "#{c.enddate.strftime('%d.%m.%Y %R')}" %></td>
+						<td><%= if c.dperiod then "#{c.dperiod} " +  
 						        	  (case c.dperiod when 1 then "день" when 2 then "дня" when 3 then "дня" when 4 then "дня" else "дней" end) end %></td>
 				<!--	<td><%= number_to_currency(c.garant_summ,:unit=>'€', precision: 0) %></td>  -->
-						<td><%= number_to_currency(c.zalog,:unit=>'€', precision: 0) %></td>
+						<td><%= c.zalog %></td>
 						<td><%= number_to_currency(c.price,:unit=>'€', precision: 0) %></td>
 						<td><%= number_to_currency(c.summ,:unit=>'€', precision: 0, separator: ".", delimiter: "") %>  x <%= "#{c.curs} MDL" %> = <%= "#{c.costlei} MDL" %></td>
-						<td><%= unless c.client.nil? then "#{c.client.id} #{c.client.sname} #{c.client.name} #{c.client.fname} #{c.client.tel} #{c.client.pemail}" end %></td>
-						<td><%= if Wlong.where("(car_id = ? AND wdate = ?)", c.car_id, c.stdate).count!=0 then Wlong.where("(car_id = ? AND wdate = ?)", c.car_id, c.stdate).order(:updated_at).last.parcurs end %></td>					
+						<td><% unless c.client.nil? then %><%= link_to "#{c.client.sname} #{c.client.name} #{c.client.fname} #{c.client.tel} #{c.client.pemail}" , edit_client_path(c.client),:method => :get, :title => 'Редактировать клиента' %><% end %></td>
+						<td><%= case c.place when 0 then 'Аэропорт' when 1 then 'Офис' else '' end %></td>
+						<td><%= if Wlong.where("(contract_id is not null and contract_id = ? AND car_id = ? AND wdate = ?)", c.id, c.car_id, c.stdate).count!=0 then Wlong.where("(contract_id is not null and contract_id = ? AND car_id = ? AND wdate = ?)", c.id, c.car_id, c.stdate).last.parcurs end %></td>					
 					</tr>		
 			<% end %>			
 		</tbody>
-		</small>
 	</table>
-  </div>
