--- a/app/views/tehservices/index.html.erb
+++ b/app/views/tehservices/index.html.erb
@@ -1,9 +1,9 @@
 <% provide(:title, 'ТО') %>
 
 <script>
-	$(document).ready(function() {
-    $('#tehs').DataTable( {
-        "order": [[ 0, "desc" ]],
+$(document).ready(function() {
+    var table = $('#pstable').DataTable( {
+        "order": [[ 1, "desc" ]],
         "language": {
             "lengthMenu": "Отображать _MENU_ строк на странице",
             "zeroRecords": "Ничего не найдено - увы...",
@@ -18,38 +18,63 @@
                 last:       ">>"
             }
         },
-        "pagingType": "full_numbers"
-    } );
+        "pagingType": "full_numbers",
+        "pageLength": 25,
+         "fixedHeader": {
+               headerOffset: ($('#navMenu').outerHeight() - 1)
+         },
+         responsive: {
+            details: {
+                type: 'column'
+            }
+        },
+        columnDefs: [ {
+            className: 'control',
+            orderable: false,
+            targets:   0
+        } ] 
+    } ); 
 } );
-</script>
-  
+</script>	  	  
+
  <h4 style="color: blue" align="center"><%= "#{@car.marca} #{@car.gnum}" %></h4>
  
- <table id="tehs" class="table table-bordered table-condensed table-hover table-striped">
+ <table id="pstable" class="table table-bordered table-condensed table-hover table-striped dt-responsive nowrap compact" style="width:100%">
   <thead>
     <tr class="info">
-      <th>№</th>
-      <th>.........</th>
+      <th style="width:5%"></th>	
+      <th class="all">Дата и время выполнения</th>	
+      <th class="none">.........</th>
       <th>Тип</th>
-      <th>Дата и время выполнения</th>
       <th>Цена</th> 
       <th>Примечание</th>
     </tr>
   </thead>
+  <tfoot>
+    <tr class="info">
+      <th style="width:5%"></th>
+      <th class="all">Дата и время выполнения</th>	
+      <th class="none">.........</th>
+      <th>Тип</th>
+      <th>Цена</th> 
+      <th>Примечание</th>
+    </tr>
+  </tfoot>
   <tbody>
   <% @tehservices.each do |item| %>
-        <% if item.updated_at > (Time.now.ago($GreenDelay)) %><tr class="success"><% else %><tr><% end %>
-	  	<td><%= item.id %></td>
+    <% if item.updated_at > (Time.now.ago($GreenDelay)) %><tr class="success"><% else %><tr><% end %>
+        <td></td>
+        <td><%= item.sdate.strftime('%Y.%m.%d %R') %></td>	
 	  	<td><%= link_to " " , tehservices_edit_path(:id => item.id), :class=> "glyphicon glyphicon-pencil", :title => 'Редактировать' %>
 			<%= link_to " " , tehservices_destroy_path(:id => item.id), :class=> "glyphicon glyphicon-remove", :title => 'Удалить', 
-			                  data: { confirm: "Удалить ТО № #{item.id} от #{item.sdate.strftime('%d.%m.%Y %R')}?" } %></td>
+			                  data: { confirm: "Удалить ТО № #{item.id} от #{item.sdate.strftime('%d.%m.%Y %R')}?" } %>
+			<%= " ID=#{item.id}" %></td>
 	  	<td><%= case item.stype when 1 then "Замена масла и фильтров"  
 	  		                    when 3 then "Техническое обслуживание" 
                                 when 2 then "Страховка"
                                 when 4 then "Техосмотр"
                                 else  item.stype 
 	  		 end %></td>
-	  	<td><%= item.sdate.strftime('%d.%m.%Y %R') %></td>
 	  	<td><%= number_to_currency(item.sprice,:unit=>'€') %></td>
 	  	<td><%= item.comments %></td>
     </tr>
